--- a/Proyecto2P/src/main/resources/com/mycompany/par4_proy2p_barrios_centeno_moreno/FXMLOpcionclientes.fxml
+++ b/Proyecto2P/src/main/resources/com/mycompany/par4_proy2p_barrios_centeno_moreno/FXMLOpcionclientes.fxml
@@ -1,12 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.par4_proy2p_barrios_centeno_moreno.FXMLOpcionclientesController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.par4_proy2p_barrios_centeno_moreno.FXMLOpcionclientesController">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints maxHeight="288.40001525878904" minHeight="10.0" prefHeight="276.00001220703126" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="193.20001831054688" minHeight="10.0" prefHeight="124.79998779296875" vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <Label alignment="CENTER" layoutX="29.0" layoutY="46.0" prefHeight="37.0" prefWidth="211.0" text="Bienvenido" />
-      <Label fx:id="lblcliente" alignment="CENTER" layoutX="36.0" layoutY="107.0" prefHeight="37.0" prefWidth="217.0" />
+      <Label fx:id="ltitulo" text="Label" GridPane.halignment="CENTER" />
+      <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="125.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+         <children>
+            <Button mnemonicParsing="false" text="Promociones del mes">
+               <font>
+                  <Font name="Britannic Bold" size="17.0" />
+               </font>
+            </Button>
+            <Button fx:id="b1" alignment="CENTER" mnemonicParsing="false" onAction="#abrirReserva" text="Reserva tu vuelo">
+               <font>
+                  <Font name="Britannic Bold" size="17.0" />
+               </font>
+            </Button>
+         </children>
+         <padding>
+            <Insets top="50.0" />
+         </padding>
+      </HBox>
    </children>
-</Pane>
+</GridPane>
