--- a/Proyecto2P/src/main/resources/com/mycompany/par4_proy2p_barrios_centeno_moreno/style2.css
+++ b/Proyecto2P/src/main/resources/com/mycompany/par4_proy2p_barrios_centeno_moreno/style2.css
@@ -7,7 +7,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     Author     : rb122
 */
 .root {
-    -fx-background-image: url('e5.png');
+    -fx-background-image: url('2.png');
     -fx-background-size: cover;
     -fx-background-repeat: no-repeat;
 }
