--- a/Proyecto2P/src/main/resources/com/mycompany/par4_proy2p_barrios_centeno_moreno/FXMLResumenreserva.fxml
+++ b/Proyecto2P/src/main/resources/com/mycompany/par4_proy2p_barrios_centeno_moreno/FXMLResumenreserva.fxml
@@ -3,63 +3,157 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="710.0" prefWidth="550.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.par4_proy2p_barrios_centeno_moreno.FXMLResumenreservaController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="728.0" prefWidth="1024.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.par4_proy2p_barrios_centeno_moreno.FXMLResumenreservaController">
    <children>
-      <Label text="Resumen de la reserva" />
-      <VBox prefHeight="61.0" prefWidth="550.0" spacing="20.0">
+      <Label text="Resumen de la reserva" textFill="#901940">
+         <font>
+            <Font name="Calibri Bold" size="40.0" />
+         </font>
+      </Label>
+      <VBox alignment="CENTER_LEFT" prefHeight="66.0" prefWidth="924.0">
          <children>
-            <Label fx:id="vueloifecha" prefHeight="18.0" prefWidth="210.0" text="Label" />
-            <Label fx:id="origendestino1" prefHeight="18.0" prefWidth="218.0" text="Label" />
+            <Label fx:id="lbFechaIda" text="Label">
+               <font>
+                  <Font name="Calibri Bold" size="25.0" />
+               </font>
+            </Label>
+            <Label fx:id="lbRutaIda" text="Label">
+               <font>
+                  <Font name="Calibri Bold" size="25.0" />
+               </font>
+            </Label>
          </children>
       </VBox>
-      <VBox alignment="CENTER" prefHeight="153.0" prefWidth="550.0" spacing="20.0">
+      <VBox alignment="CENTER" prefHeight="168.0" prefWidth="924.0" style="-fx-border-color: gray;">
          <children>
-            <Label fx:id="duracionvi" text="Label" />
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0">
                <children>
-                  <Label fx:id="horainicio" text="Label" />
-                  <Separator prefWidth="200.0" />
-                  <Label fx:id="horallegada" text="Label" />
+                  <Label fx:id="lbHoraIdaSalida" text="Label">
+                     <font>
+                        <Font name="Calibri" size="20.0" />
+                     </font>
+                  </Label>
+                  <VBox alignment="CENTER" prefHeight="109.0" prefWidth="524.0" spacing="20.0">
+                     <children>
+                        <Label fx:id="lbDuracionIda" text="Label">
+                           <font>
+                              <Font name="Calibri Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <Line endX="419.29290771484375" endY="1.2928931713104248" startX="-100.0" stroke="#901940" strokeWidth="3.0" />
+                        <Label fx:id="lbPrecioIda" text="Label">
+                           <font>
+                              <Font name="Calibri Bold" size="20.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <Label fx:id="lbHoraIdaLlegada" text="Label">
+                     <font>
+                        <Font name="Calibri" size="20.0" />
+                     </font>
+                  </Label>
                </children>
             </HBox>
-            <Label fx:id="preciovueloi" text="Label" />
-            <Button fx:id="btndetallevueloi" mnemonicParsing="false" onAction="#mostrarddetallevueloi" prefHeight="26.0" prefWidth="121.0" text="Detalles del vuelo">
-               <VBox.margin>
-                  <Insets left="370.0" />
-               </VBox.margin>
-            </Button>
-         </children>
-      </VBox>
-      <VBox prefHeight="75.0" prefWidth="550.0" spacing="20.0">
-         <children>
-            <Label fx:id="vueloregresofecha" prefHeight="18.0" prefWidth="210.0" text="Label" />
-            <Label fx:id="origendestino2" prefHeight="18.0" prefWidth="212.0" text="Label" />
-         </children>
-      </VBox>
-      <VBox alignment="CENTER" prefHeight="180.0" prefWidth="550.0" spacing="20.0">
-         <children>
-            <Label fx:id="duracionvR" text="Label" />
-            <HBox alignment="CENTER" prefHeight="54.0" prefWidth="550.0" spacing="20.0">
+            <HBox alignment="CENTER_RIGHT" prefHeight="47.0" prefWidth="1024.0">
                <children>
-                  <Label fx:id="horainicio2" text="Label" />
-                  <Separator prefWidth="200.0" />
-                  <Label fx:id="horallegada2" text="Label" />
+                  <Button fx:id="btDetallesIda" mnemonicParsing="false" style="-fx-background-color: #901940;" text="Detalles del Vuelo" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Bold" size="15.0" />
+                     </font>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets right="10.0" />
+               </padding>
+            </HBox>
+         </children>
+      </VBox>
+      <VBox prefHeight="66.0" prefWidth="924.0">
+         <children>
+            <VBox alignment="CENTER_LEFT" prefHeight="66.0" prefWidth="100.0">
+               <children>
+                  <Label fx:id="lbFechaRetorno" text="Label">
+                     <font>
+                        <Font name="Calibri Bold" size="25.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lbRutaRetorno" text="Label">
+                     <font>
+                        <Font name="Calibri Bold" size="25.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+         </children>
+      </VBox>
+      <VBox alignment="CENTER" prefHeight="168.0" prefWidth="924.0" style="-fx-border-color: gray;">
+         <children>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="30.0">
+               <children>
+                  <Label fx:id="lbHoraRetornoSalida" text="Label">
+                     <font>
+                        <Font name="Calibri" size="20.0" />
+                     </font>
+                  </Label>
+                  <VBox alignment="CENTER" prefHeight="90.0" prefWidth="520.0" spacing="20.0">
+                     <children>
+                        <Label fx:id="lbDuracionRetorno" text="Label">
+                           <font>
+                              <Font name="Calibri Bold" size="20.0" />
+                           </font>
+                        </Label>
+                        <Line endX="419.29290771484375" endY="1.2928931713104248" startX="-100.0" stroke="#901940" strokeWidth="3.0" />
+                        <Label fx:id="lbPrecioRetorno" text="Label">
+                           <font>
+                              <Font name="Calibri Bold" size="20.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <Label fx:id="lbHoraRetornoLlegada" text="Label">
+                     <font>
+                        <Font name="Calibri" size="20.0" />
+                     </font>
+                  </Label>
                </children>
             </HBox>
-            <Label fx:id="preciovueloR" text="Label" />
-            <Button fx:id="btndetallevueloR" mnemonicParsing="false" onAction="#mostrarddetallevueloR" text="Detalles del vuelo">
-               <VBox.margin>
-                  <Insets left="370.0" />
-               </VBox.margin>
-            </Button>
+            <HBox alignment="CENTER_RIGHT" prefHeight="47.0" prefWidth="1024.0">
+               <children>
+                  <Button fx:id="btDetallesRetorno" mnemonicParsing="false" style="-fx-background-color: #901940;" text="Detalles del Vuelo" textFill="WHITE">
+                     <font>
+                        <Font name="Arial Bold" size="15.0" />
+                     </font>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets right="10.0" />
+               </padding>
+            </HBox>
          </children>
       </VBox>
-      <Label fx:id="preciotoalf" alignment="TOP_RIGHT" contentDisplay="RIGHT" prefHeight="18.0" prefWidth="418.0" text="Label" />
-      <Button fx:id="btncontinuar" mnemonicParsing="false" onAction="#continuar" text="Continuar" />
+      <HBox alignment="CENTER_RIGHT" prefHeight="21.0" prefWidth="924.0">
+         <children>
+            <Label fx:id="lbSumaPrecios" text="Label">
+               <font>
+                  <Font name="Calibri Bold" size="25.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
+      <Button fx:id="btContinuar" mnemonicParsing="false" style="-fx-background-color: #901940;" text="Continuar" textFill="WHITE">
+         <font>
+            <Font name="Arial Bold" size="15.0" />
+         </font>
+      </Button>
    </children>
+   <padding>
+      <Insets left="50.0" right="50.0" />
+   </padding>
 </VBox>
