--- a/Proyecto2P/src/main/resources/com/mycompany/par4_proy2p_barrios_centeno_moreno/FXMLReservaVueloRegreso.fxml
+++ b/Proyecto2P/src/main/resources/com/mycompany/par4_proy2p_barrios_centeno_moreno/FXMLReservaVueloRegreso.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane fx:id="root3" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.par4_proy2p_barrios_centeno_moreno.FXMLReservaVueloController">
+<GridPane fx:id="rootR" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.par4_proy2p_barrios_centeno_moreno.FXMLReservaVueloRegresoController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -20,7 +20,7 @@
     <RowConstraints maxHeight="500.79999389648435" minHeight="10.0" prefHeight="425.0" valignment="CENTER" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <VBox fx:id="vbox1" focusTraversable="true" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2" />
+      <VBox fx:id="vboxR" focusTraversable="true" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2" />
       <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
          <children>
             <Label text="Ordenar por:" textFill="WHITE">
@@ -31,7 +31,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <ComboBox fx:id="ordenar" onAction="#Opcion1" prefWidth="150.0">
+            <ComboBox fx:id="ordenarR" onAction="#Opcion2" prefWidth="150.0">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
@@ -40,7 +40,7 @@
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Label fx:id="titulo2" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="500.0" />
+            <Label fx:id="tituloR" alignment="CENTER" contentDisplay="CENTER" prefHeight="18.0" prefWidth="500.0" />
          </children>
       </HBox>
    </children>
