--- a/Proyecto2P/src/main/resources/com/mycompany/par4_proy2p_barrios_centeno_moreno/FXMLVentanaPasajeros.fxml
+++ b/Proyecto2P/src/main/resources/com/mycompany/par4_proy2p_barrios_centeno_moreno/FXMLVentanaPasajeros.fxml
@@ -1,20 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox fx:id="rootV" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.par4_proy2p_barrios_centeno_moreno.FXMLVentanaPasajerosController">
+<GridPane fx:id="rootV" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.par4_proy2p_barrios_centeno_moreno.FXMLVentanaPasajerosController">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints maxHeight="194.79999389648438" minHeight="10.0" prefHeight="57.200006103515626" vgrow="ALWAYS" />
+    <RowConstraints maxHeight="373.4000053405762" minHeight="10.0" prefHeight="285.3999938964844" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="373.4000053405762" minHeight="10.0" prefHeight="57.60001220703123" vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <Label text="Datos Personales">
+      <Label alignment="CENTER" contentDisplay="CENTER" text="Datos Personales">
+         <GridPane.margin>
+            <Insets left="202.0" />
+         </GridPane.margin>
          <font>
             <Font name="Britannic Bold" size="25.0" />
          </font>
-         <VBox.margin>
-            <Insets top="30.0" />
-         </VBox.margin>
       </Label>
+      <VBox fx:id="vb0" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1" />
+      <Button fx:id="buttonp" mnemonicParsing="false" onAction="#continuar" text="Continuar" GridPane.rowIndex="2">
+         <GridPane.margin>
+            <Insets left="260.0" />
+         </GridPane.margin>
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
    </children>
-</VBox>
+</GridPane>
