--- a/Proyecto2P/src/main/resources/com/mycompany/par4_proy2p_barrios_centeno_moreno/FXMLVentanaReserva.fxml
+++ b/Proyecto2P/src/main/resources/com/mycompany/par4_proy2p_barrios_centeno_moreno/FXMLVentanaReserva.fxml
@@ -30,7 +30,7 @@
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" text="Origen:" textFill="#1f6a7b">
+                  <Label alignment="CENTER" contentDisplay="CENTER" text="Origen:" textFill="WHITE">
                      <HBox.margin>
                         <Insets bottom="5.0" left="40.0" right="5.0" top="20.0" />
                      </HBox.margin>
@@ -53,7 +53,7 @@
             </HBox>
             <HBox prefHeight="100.0" prefWidth="250.0">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" text="Salida:" textFill="#1f6a7b">
+                  <Label alignment="CENTER" contentDisplay="CENTER" text="Salida:" textFill="WHITE">
                      <HBox.margin>
                         <Insets bottom="5.0" left="40.0" right="5.0" top="-5.0" />
                      </HBox.margin>
@@ -77,7 +77,7 @@
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" text="Destino:" textFill="#1f6a7b">
+                  <Label alignment="CENTER" contentDisplay="CENTER" text="Destino:" textFill="WHITE">
                      <HBox.margin>
                         <Insets bottom="5.0" right="5.0" top="20.0" />
                      </HBox.margin>
@@ -97,7 +97,7 @@
             </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" text="Regreso:" textFill="#1f6a7b">
+                  <Label alignment="CENTER" contentDisplay="CENTER" text="Regreso:" textFill="WHITE">
                      <HBox.margin>
                         <Insets bottom="5.0" right="5.0" top="-5.0" />
                      </HBox.margin>
@@ -127,7 +127,7 @@
       </Label>
       <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2" GridPane.valignment="CENTER">
          <children>
-            <Label text="¿Cuantos viajan?" textFill="#1f6a7b">
+            <Label text="¿Cuantos viajan?" textFill="WHITE">
                <VBox.margin>
                   <Insets left="40.0" top="-20.0" />
                </VBox.margin>
@@ -137,7 +137,7 @@
             </Label>
             <HBox prefHeight="85.0" prefWidth="602.0">
                <children>
-                  <Label text="Cantidad:" textFill="#1f6a7b">
+                  <Label text="Cantidad:" textFill="WHITE">
                      <HBox.margin>
                         <Insets bottom="5.0" left="40.0" right="5.0" top="20.0" />
                      </HBox.margin>
