--- a/Proyecto2P/src/main/resources/com/mycompany/par4_proy2p_barrios_centeno_moreno/FXMLOpcionclientes.fxml
+++ b/Proyecto2P/src/main/resources/com/mycompany/par4_proy2p_barrios_centeno_moreno/FXMLOpcionclientes.fxml
@@ -3,13 +3,14 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.par4_proy2p_barrios_centeno_moreno.FXMLOpcionclientesController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.par4_proy2p_barrios_centeno_moreno.FXMLOpcionclientesController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -18,7 +19,13 @@
     <RowConstraints maxHeight="193.20001831054688" minHeight="10.0" prefHeight="124.79998779296875" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label fx:id="ltitulo" text="Label" GridPane.halignment="CENTER" />
+      <Label fx:id="ltitulo" textFill="WHITE" GridPane.halignment="CENTER">
+         <font>
+            <Font name="Britannic Bold" size="84.0" />
+         </font>
+         <effect>
+            <DropShadow height="49.08" radius="23.4525" width="46.73" />
+         </effect></Label>
       <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="125.0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
          <children>
             <Button fx:id="b2" mnemonicParsing="false" text="Promociones del mes">
